--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+@article{DBLP:journals/pvldb/PaganelliBBG22,
+  author    = {Matteo Paganelli and
+               Francesco Del Buono and
+               Andrea Baraldi and
+               Francesco Guerra},
+  title     = {Analyzing How {BERT} Performs Entity Matching},
+  journal   = {Proc. {VLDB} Endow.},
+  volume    = {15},
+  number    = {8},
+  pages     = {1726--1738},
+  year      = {2022},
+  html={https://www.vldb.org/pvldb/vol15/p1726-paganelli.pdf},
+    selected={true}
+}
+
+
 @string{aps = {American Physical Society,}}
 
 @book{einstein1956investigations,
