--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,11 @@
 ---
 ---
+@string{PVLDB = {Proceedings of VLDB Endowment,}}
+
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
+abbr={PVLDB},
+bibtex_show={true},
   author    = {Matteo Paganelli and
                Francesco Del Buono and
                Andrea Baraldi and
