--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 @string{PVLDB = {Proceedings of VLDB Endowment,}}
-
+@string{SAC = {{ACM/SIGAPP} Symposium on Applied Computing,}}
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
 abbr={PVLDB},
@@ -20,6 +20,19 @@ bibtex_show={true},
     selected={true}
 }
 
+@inproceedings{DBLP:conf/sac/PaganelliB0022,
+abbr={SAC},
+bibtex_show={true},
+  author    = {Matteo Paganelli and
+               Francesco Del Buono and
+               Francesco Guerra and
+               Nicola Ferro},
+  title     = {Evaluating the integration of datasets},
+  booktitle = {{SAC}},
+  pages     = {347--356},
+  publisher = {{ACM}},
+  year      = {2022}
+}
 
 @string{aps = {American Physical Society,}}
 
