--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,6 +2,10 @@
 ---
 @string{PVLDB = {Proceedings of VLDB Endowment,}}
 @string{SAC = {{ACM/SIGAPP} Symposium on Applied Computing,}}
+@string{SEBD = {Proceedings of Italian Symposium on Advanced Database Systems,}}
+@string{CIKM = {Proceedings of International Conference on Information
+               and Knowledge Management,}}
+
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
 abbr={PVLDB},
@@ -32,6 +36,37 @@ bibtex_show={true},
   pages     = {347--356},
   publisher = {{ACM}},
   year      = {2022}
+}
+
+@inproceedings{DBLP:conf/sebd/0002BP022,
+abbr={SEBD},
+bibtex_show={true},
+  author    = {Andrea Baraldi and
+               Francesco Del Buono and
+               Matteo Paganelli and
+               Francesco Guerra},
+  title     = {Landmark Explanation: a Tool for Entity Matching},
+  booktitle = {{SEBD}},
+  series    = {{CEUR} Workshop Proceedings},
+  volume    = {3194},
+  pages     = {69--76},
+  publisher = {CEUR-WS.org},
+  year      = {2022}
+}
+
+@inproceedings{DBLP:conf/cikm/BaraldiBP021,
+abbr={CIKM},
+bibtex_show={true},
+  author    = {Andrea Baraldi and
+               Francesco Del Buono and
+               Matteo Paganelli and
+               Francesco Guerra},
+  title     = {Landmark Explanation: An Explainer for Entity Matching Models},
+  booktitle = {{CIKM}},
+  pages     = {4680--4684},
+  publisher = {{ACM}},
+  year      = {2021},
+  selected = {true}
 }
 
 @string{aps = {American Physical Society,}}
@@ -76,7 +111,7 @@ bibtex_show={true},
   html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
   pdf={example_pdf.pdf},
   altmetric={248277},
-  selected={true}
+  selected={false}
 }
 
 @article{einstein1905molekularkinetischen,
