--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,6 +5,8 @@
 @string{SEBD = {Proceedings of Italian Symposium on Advanced Database Systems,}}
 @string{CIKM = {Proceedings of International Conference on Information
                and Knowledge Management,}}
+@string{EDBT = {Proceedings of International Conference on Extending Database
+               Technology,}}
 
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
@@ -67,6 +69,21 @@ bibtex_show={true},
   publisher = {{ACM}},
   year      = {2021},
   selected = {true}
+}
+@inproceedings{DBLP:conf/edbt/PaganelliBP0V21,
+abbr={EDBT},
+bibtex_show={true},
+  author    = {Matteo Paganelli and
+               Francesco Del Buono and
+               Marco Pevarello and
+               Francesco Guerra and
+               Maurizio Vincini},
+  title     = {Automated Machine Learning for Entity Matching Tasks},
+  booktitle = {{EDBT}},
+  pages     = {325--330},
+  publisher = {OpenProceedings.org},
+  year      = {2021},
+  selected ={true}
 }
 
 @string{aps = {American Physical Society,}}
