--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,8 @@
                and Knowledge Management,}}
 @string{EDBT = {Proceedings of International Conference on Extending Database
                Technology,}}
+@string{SIGMOD = {Proceedings of International Conference on Management of Data (SIGMOD),}}
+
 
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
@@ -85,6 +87,67 @@ bibtex_show={true},
   year      = {2021},
   selected ={true}
 }
+
+@inproceedings{DBLP:conf/edbt/BaraldiBP021,
+abbr={EDBT},
+bibtex_show={true},
+  author    = {Andrea Baraldi and
+               Francesco Del Buono and
+               Matteo Paganelli and
+               Francesco Guerra},
+  title     = {Using Landmarks for Explaining Entity Matching Models},
+  booktitle = {{EDBT}},
+  pages     = {451--456},
+  publisher = {OpenProceedings.org},
+  year      = {2021}
+}
+
+@inproceedings{DBLP:conf/sebd/PaganelliSMI021,
+abbr={SEBD},
+bibtex_show={true},
+  author    = {Andr
+  author    = {Matteo Paganelli and
+               Paolo Sottovia and
+               Antonio Maccioni and
+               Matteo Interlandi and
+               Francesco Guerra},
+  title     = {Using Descriptions for Explaining Entity Matches (Discussion Paper)},
+  booktitle = {{SEBD}},
+  series    = {{CEUR} Workshop Proceedings},
+  volume    = {2994},
+  pages     = {291--298},
+  publisher = {CEUR-WS.org},
+  year      = {2021}
+}
+
+@inproceedings{DBLP:conf/sigmod/BuonoPSI021,
+abbr={SIGMOD},
+bibtex_show={true},
+  author    = {Francesco Del Buono and
+               Matteo Paganelli and
+               Paolo Sottovia and
+               Matteo Interlandi and
+               Francesco Guerra},
+  title     = {Transforming {ML} Predictive Pipelines into {SQL} with {MASQ}},
+  booktitle = {{SIGMOD} Conference},
+  pages     = {2696--2700},
+  publisher = {{ACM}},
+  year      = {2021}
+}
+@proceedings{DBLP:conf/edbt/2021,
+abbr={EDBT},
+bibtex_show={true},
+  editor    = {Yannis Velegrakis and
+               Demetris Zeinalipour{-}Yazti and
+               Panos K. Chrysanthis and
+               Francesco Guerra},
+  title     = {Proceedings of the 24th International Conference on Extending Database
+               Technology, {EDBT} 2021, Nicosia, Cyprus, March 23 - 26, 2021},
+  publisher = {OpenProceedings.org},
+  year      = {2021}
+}
+
+
 
 @string{aps = {American Physical Society,}}
 
