--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -118,6 +118,52 @@ bibtex_show={true},
   publisher = {CEUR-WS.org},
   year      = {2021}
 }
+@article{ WOS:000597419200003,
+bibtex_show={true},
+Author = {Babic, Karlo and Guerra, Francesco and Martincic-Ipsic, Sanda and
+   Mestrovic, Ana},
+Title = {A Comparison of Approaches for Measuring the Semantic Similarity of
+   Short Texts Based on Word Embeddings},
+Journal = {JOURNAL OF INFORMATION AND ORGANIZATIONAL SCIENCES},
+Year = {2020},
+Volume = {44},
+Number = {2},
+Pages = {231-246},
+Abstract = {Measuring the semantic similarity of texts has a vital role in various
+   tasks from the field of natural language processing. In this paper, we
+   describe a set of experiments we carried out to evaluate and compare the
+   performance of different approaches for measuring the semantic
+   similarity of short texts. We perform a comparison of four models based
+   on word embeddings: two variants of Word2Vec (one based on Word2Vec
+   trained on a specific dataset and the second extending it with
+   embeddings of word senses), FastText, and TF-IDF. Since these models
+   provide word vectors, we experiment with various methods that calculate
+   the semantic similarity of short texts based on word vectors. More
+   precisely, for each of these models, we test five methods for
+   aggregating word embeddings into text embedding. We introduced three
+   methods by making variations of two commonly used similarity measures.
+   One method is an extension of the cosine similarity based on centroids,
+   and the other two methods are variations of the Okapi BM25 function. We
+   evaluate all approaches on the two publicly available datasets: SICK and
+   Lee in terms of the Pearson and Spearman correlation. The results
+   indicate that extended methods perform better from the original in most
+   of the cases.},
+Type = {Article},
+Affiliation = {Babic, K (Corresponding Author), Univ Rijeka, Ctr Artificial Intelligence \& Cybersecur, Dept Informat, Rijeka, Croatia.
+   Babic, Karlo; Martincic-Ipsic, Sanda; Mestrovic, Ana, Univ Rijeka, Ctr Artificial Intelligence \& Cybersecur, Dept Informat, Rijeka, Croatia.
+   Guerra, Francesco, Univ Modena \& Reggio Emilia, Dept Engn Enzo Ferrari, Modena, Italy.},
+DOI = {10.31341/jios.44.2.2},
+ISSN = {1846-3312},
+EISSN = {1846-9418},
+Author-Email = {karlo.babic@uniri.hr
+   francesco.guerra@unimore.it
+   smarti@uniri.hr
+   amestrovic@uniri.hr},
+Times-Cited = {0},
+Unique-ID = {WOS:000597419200003},
+DA = {2022-12-15},
+}
+
 
 @inproceedings{DBLP:conf/sigmod/BuonoPSI021,
 abbr={SIGMOD},
