--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,39 @@
 @string{EDBT = {Proceedings of International Conference on Extending Database
                Technology,}}
 @string{SIGMOD = {Proceedings of International Conference on Management of Data (SIGMOD),}}
+@string{Inf. Syst. = {Information Systems,}}
+@string{iiWAS = {Proceedings of International Conference on Information Integration
+               and Web-based Applications  (iiWAS),}}
 
+@inproceedings{DBLP:conf/iiwas/PaganelliB0020,
+abbr={iiWAS},
+bibtex_show={true},
+  author    = {Matteo Paganelli and
+               Francesco Del Buono and
+               Francesco Guerra and
+               Nicola Ferro},
+  title     = {Unsupervised Evaluation of Data Integration Processes},
+  booktitle = {iiWAS},
+  pages     = {77--81},
+  publisher = {{ACM}},
+  year      = {2020}
+}
+
+@article{DBLP:journals/is/PaganelliSMIG20,
+abbr={Inf. Syst.},
+bibtex_show={true},
+
+  author    = {Matteo Paganelli and
+               Paolo Sottovia and
+               Antonio Maccioni and
+               Matteo Interlandi and
+               Francesco Guerra},
+  title     = {Explaining data with descriptions},
+  journal   = {Inf. Syst.},
+  volume    = {92},
+  pages     = {101549},
+  year      = {2020}
+}
 
 
 @article{DBLP:journals/pvldb/PaganelliBBG22,
