--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,24 @@
 @string{iiWAS = {Proceedings of International Conference on Information Integration
                and Web-based Applications  (iiWAS),}}
 
+
+@article{DBLP:journals/pvldb/BonifatiB0T22,
+abbr={PVLDB},
+bibtex_show={true},
+  selected = {true},
+  author    = {Angela Bonifati and
+               Francesco Del Buono and
+               Francesco Guerra and
+               Donato Tiano},
+  title     = {Time2Feat: Learning Interpretable Representations for Multivariate
+               Time Series Clustering},
+  journal   = {Proc. {VLDB} Endow.},
+  volume    = {16},
+  number    = {2},
+  pages     = {193--201},
+  year      = {2022}
+}
+
 @inproceedings{DBLP:conf/iiwas/PaganelliB0020,
 abbr={iiWAS},
 bibtex_show={true},
