--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,21 @@
 @string{iiWAS = {Proceedings of International Conference on Information Integration
                and Web-based Applications  (iiWAS),}}
 
-
+@inproceedings{DBLP:conf/edbt/0002B0PV23,
+abbr={PVLDB},
+bibtex_show={true},
+  selected = {true},
+  author       = {Andrea Baraldi and
+                  Francesco Del Buono and
+                  Francesco Guerra and
+                  Matteo Paganelli and
+                  Maurizio Vincini},
+  title        = {An Intrinsically Interpretable Entity Matching System},
+  booktitle    = {{EDBT}},
+  pages        = {645--657},
+  publisher    = {OpenProceedings.org},
+  year         = {2023}
+}
 @article{DBLP:journals/pvldb/BonifatiB0T22,
 abbr={PVLDB},
 bibtex_show={true},
@@ -134,8 +148,7 @@ bibtex_show={true},
   booktitle = {{EDBT}},
   pages     = {325--330},
   publisher = {OpenProceedings.org},
-  year      = {2021},
-  selected ={true}
+  year      = {2021}
 }
 
 @inproceedings{DBLP:conf/edbt/BaraldiBP021,
