--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,7 @@
                and Web-based Applications  (iiWAS),}}
 
 @inproceedings{DBLP:conf/edbt/0002B0PV23,
-abbr={PVLDB},
+abbr={EDBT},
 bibtex_show={true},
   selected = {true},
   author       = {Andrea Baraldi and
