--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,7 +15,7 @@
 @inproceedings{DBLP:conf/edbt/0002B0PV23,
 abbr={EDBT},
 bibtex_show={true},
-  selected = {true},
+  selected = {false},
   author       = {Andrea Baraldi and
                   Francesco Del Buono and
                   Francesco Guerra and
