--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,24 @@
 @string{Inf.Syst. = {Information Systems,}}
 @string{iiWAS = {Proceedings of International Conference on Information Integration
                and Web-based Applications  (iiWAS),}}
+               
+@inproceedings{DBLP:conf/sebd/0002B0GPV23,
+abbr={SEBD},
+bibtex_show={true},
+  author       = {Andrea Baraldi and
+                  Francesco Del Buono and
+                  Francesco Guerra and
+                  Giacomo Guiduzzi and
+                  Matteo Paganelli and
+                  Maurizio Vincini},
+  title        = {Interpretable Entity Matching with {WYM}},
+  booktitle    = {{SEBD}},
+  series       = {{CEUR} Workshop Proceedings},
+  volume       = {3478},
+  pages        = {101--109},
+  publisher    = {CEUR-WS.org},
+  year         = {2023}
+}
 
 @inproceedings{DBLP:conf/edbt/0002B0PV23,
 abbr={EDBT},
