--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,25 @@
 @string{Inf.Syst. = {Information Systems,}}
 @string{iiWAS = {Proceedings of International Conference on Information Integration
                and Web-based Applications  (iiWAS),}}
-               
+ @string{TKDE = {IEEE Transaction on Knowledge and Data Engineering  (TKDE),}}
+
+@article{DBLP:journals/tkde/PaganelliSPIG23,
+abbr={TKDE},
+bibtex_show={true},
+  selected = {true},
+  author       = {Matteo Paganelli and
+                  Paolo Sottovia and
+                  Kwanghyun Park and
+                  Matteo Interlandi and
+                  Francesco Guerra},
+  title        = {Pushing {ML} Predictions Into DBMSs},
+  journal      = {{IEEE} Trans. Knowl. Data Eng.},
+  volume       = {35},
+  number       = {10},
+  pages        = {10295--10308},
+  year         = {2023}
+}
+              
 @inproceedings{DBLP:conf/sebd/0002B0GPV23,
 abbr={SEBD},
 bibtex_show={true},
