--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,23 @@
 @string{iiWAS = {Proceedings of International Conference on Information Integration
                and Web-based Applications  (iiWAS),}}
  @string{TKDE = {IEEE Transaction on Knowledge and Data Engineering  (TKDE),}}
+ 
+@article{DBLP:journals/pvldb/BonifatiB0LT23,
+abbr={PVLDB},
+bibtex_show={true},
+  selected = {true},
+  author       = {Angela Bonifati and
+                  Francesco Del Buono and
+                  Francesco Guerra and
+                  Miki Lombardi and
+                  Donato Tiano},
+  title        = {Interpretable Clustering of Multivariate Time Series with Time2Feat},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {16},
+  number       = {12},
+  pages        = {3994--3997},
+  year         = {2023}
+}
 
 @article{DBLP:journals/tkde/PaganelliSPIG23,
 abbr={TKDE},
